[SIFISC-938] Appliqué un work-around pour le bug jQuery #4111 qui fait apparaître le div du date-picker (normalement invisible) en bas de la page.
git-svn-id: https://svn.etat-de-vaud.ch/SVN_SOCLE/registre/unireg/trunk@58945 cb3efa0a-b8b0-9f43-a4c8-343d8b7e4362

--- a/unireg/web/src/main/webapp/css/x/layout.css
+++ b/unireg/web/src/main/webapp/css/x/layout.css
@@ -1,3 +1,8 @@
+/* [SIFISC-938] workaround for jQuery bug #4111 (http://bugs.jqueryui.com/ticket/4111) */
+#ui-datepicker-div {
+	display:none;
+}
+
 #header {
 	background-image: url(fond_header_1_120.gif);
 	background-repeat: repeat-x;
